# customer_support_agents

./: .requirements.txt  Makefile  pyproject.toml  requirements.txt
backend/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  PROJECT_CHECKLIST.md  QUICKSTART.md  README.md  __init__.py  pyproject.toml
backend/src/: .env.example  __init__.py  agent_engine_app.py  app.py  deploy.py  deployment_config.py
backend/src/agents/: __init__.py  agent.py
backend/src/agents/sub_agents/complaint_flow_agent/: __init__.py  agent.py
backend/src/agents/sub_agents/knowledge_base_agent/: agent.py
backend/src/agents/sub_agents/knowledge_base_agent_multi/: __init__.py  agent.py
backend/src/agents/sub_agents/status_check_agent/: __init__.py  agent.py
backend/src/config/: settings.py
backend/src/prompts/: __init__.py  complaint_flow_prompt.py  knowledge_base_prompt.py  status_check_prompt.py  supervisor_prompt.py  supervisor_prompt_multi.py  validation_prompts.py
backend/src/schemas/: complaint_schemas.py  status_schemas.py
backend/src/tools/: __init__.py  config.py  rag_engine.py  set_language.py  ticket.py
backend/src/utils/: __init__.py  gcs.py  tracing.py  typing.py
backend/tests/: test_complaint_flow.py  test_knowledge_base.py  test_status_check.py  test_supervisor.py  test_ticket.py  test_validation_agent.py
logs/: deployment_metadata.json
n8n-proxy/: .env
